--- a/public/ADMIN/CSS ADMIN/Quản lý người dùng.css
+++ b/public/ADMIN/CSS ADMIN/Quản lý người dùng.css
@@ -365,3 +365,13 @@ tr:nth-child(2) {
     padding: 8px;
     margin: 0;
 }
+
+.img-hinhanhquat_ad {
+    width: 100px;
+    height: 100px;
+    overflow: hidden;
+}
+.img-hinhanhquat_ad img {
+    width: 100%;
+    height: 100%;
+}
