--- a/public/css/pro-detail.css
+++ b/public/css/pro-detail.css
@@ -6,9 +6,14 @@
 }
 .owl-carousel .owl-item img {
     display: block;
+    padding: 5px;
     width: 100%;
+    height: 100%;
+    object-fit: contain;
 }
-
+.owl-item {
+    height: 100px;
+}
 .owl-carousel .owl-dots.disabled,
 .owl-carousel .owl-nav.disabled {
     display: none;
@@ -160,4 +165,8 @@ hr {
 .describe-title {
     font-size: 25px;
     font-weight: 500;
+}
+
+.cothebancungthich {
+    background-color: #d5d5d5;
 }
