--- a/public/css/product.css
+++ b/public/css/product.css
@@ -1,120 +1,225 @@
 .filters {
-  width: 100%;
-  padding: 10px;
-  padding-left: 20px;
-  border: 0.5px solid rgba(126, 126, 126, 0.404);
-  border-radius: 10px;
-  position: sticky;
-  top: 70px;
+    width: 100%;
+    padding: 10px;
+    padding-left: 20px;
+    border: 0.5px solid rgba(126, 126, 126, 0.404);
+    border-radius: 10px;
+    position: sticky;
+    top: 70px;
 }
 .filter-row {
-  align-items: center;
-  margin-bottom: 8px;
-  margin-top: 5px;
-  font-size: 15px;
-  font-weight: 550;
+    align-items: center;
+    margin-bottom: 8px;
+    margin-top: 5px;
+    font-size: 15px;
+    font-weight: 550;
 }
 
 .filter-title {
-  font-size: 15px;
-  font-weight: 700;
-  margin-bottom: 15px;
-  margin-top: 15px;
+    font-size: 15px;
+    font-weight: 700;
+    margin-bottom: 15px;
+    margin-top: 15px;
 }
 .slider {
-  overflow: hidden;
-  height: 710px;
-  width: 100%;
+    overflow: hidden;
+    height: 710px;
+    width: 100%;
 }
 .slider-img {
-  height: auto;
-  width: 100%;
+    height: auto;
+    width: 100%;
 }
 #carouselExampleIndicators {
-  height: 710px;
+    height: 710px;
 }
 
 .filter-sub {
-  margin-bottom: 10px;
-  font-weight: 500;
+    margin-bottom: 10px;
+    font-weight: 500;
 }
 /* <!-- start list card car --> */
 
 .timkiems {
-  width: 100%;
-  height: 50px;
-  border: 0.7px solid rgba(79, 77, 77, 0.677);
-  border-radius: 10px;
-  padding: 6px;
-  display: flex;
-  margin-bottom: 20px;
+    width: 100%;
+    height: 50px;
+    border: 0.7px solid rgba(79, 77, 77, 0.677);
+    border-radius: 10px;
+    padding: 6px;
+    display: flex;
+    margin-bottom: 20px;
 
-  align-items: center;
+    align-items: center;
 }
 #edt_timkiem_trangchu_muaxe {
-  margin-left: 5px;
-  width: 100%;
-  height: 100%;
-  font-size: 16px;
-  border: 0px;
+    margin-left: 5px;
+    width: 100%;
+    height: 100%;
+    font-size: 16px;
+    border: 0px;
 }
 #edt_timkiem_trangchu_muaxe:focus {
-  outline: none;
+    outline: none;
 }
 
 .card {
-  width: 100%;
-  height: 400px;
-  border: 1px rgba(52, 52, 52, 0.266) solid;
-  border-radius: 20px;
-  margin-top: 10px;
-  margin-right: 20px;
-  margin-bottom: 20px;
-  box-sizing: border-box;
-  overflow: hidden;
+    width: 100%;
+    height: 400px;
+    border: 1px rgba(52, 52, 52, 0.266) solid;
+    border-radius: 20px;
+    margin-top: 10px;
+    margin-right: 20px;
+    margin-bottom: 20px;
+    box-sizing: border-box;
+    overflow: hidden;
 }
 .card:hover {
-  box-shadow: 0 0 20px rgba(142, 142, 142, 0.381);
+    box-shadow: 0 0 20px rgba(142, 142, 142, 0.381);
 }
 .hinhanh-card {
-  width: 100%;
-  height: 170px;
-  overflow: hidden;
+    width: 100%;
+    height: 170px;
+    overflow: hidden;
 }
 
 .card-list_img {
-  height: 170px;
-  width: 100%;
+    height: 170px;
+    width: 100%;
 }
 #tieude-card {
-  line-height: 20px;
-  margin: 10px;
-  font-size: 18px;
-  font-weight: 600;
-  color: rgb(49, 64, 111);
-  white-space: normal;
+    line-height: 20px;
+    margin: 10px;
+    font-size: 18px;
+    font-weight: 600;
+    color: rgb(49, 64, 111);
+    white-space: normal;
 }
 .thongtinxe-card {
-  width: 100%;
-  padding: 10px;
-  display: flex;
-  flex-wrap: wrap;
-  color: rgb(49, 64, 111);
-  font-size: 13px;
-  font-weight: 600;
+    width: 100%;
+    padding: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    color: rgb(49, 64, 111);
+    font-size: 13px;
+    font-weight: 600;
 }
 .thongtinxe-card_chung {
-  padding-left: 5px;
-  width: 50%;
-  margin-bottom: 15px;
-  display: flex;
-  align-items: center;
+    padding-left: 5px;
+    width: 50%;
+    margin-bottom: 15px;
+    display: flex;
+    align-items: center;
 }
 
 #giaxe-card {
-  font-size: 20px;
-  color: rgb(239, 76, 73);
-  font-weight: 700;
-  margin: 15px;
+    font-size: 20px;
+    color: rgb(239, 76, 73);
+    font-weight: 700;
+    margin: 15px;
 }
 /* <!-- end list card car --> */
+
+.bolocs {
+    margin-top: 20px;
+    padding: 10px;
+    background-color: rgb(230, 230, 230);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.inputs-loc {
+    display: flex;
+    gap: 5px;
+}
+.inputs-loc input {
+    width: 50%;
+}
+.boloc-timkiem input {
+    width: 100%;
+}
+.title-locgia {
+    font-size: 14px;
+    font-weight: 600;
+    margin: 5px 0;
+}
+.title-boloc {
+    font-size: 16px;
+    font-weight: 600;
+    margin: 5px 0;
+}
+.bolocs button {
+    margin-top: 10px;
+    background-color: #e67b11;
+    width: 100%;
+    padding: 5px;
+    color: #fff;
+    font-size: 15px;
+}
+.bolocs button:hover {
+    background-color: #f09942;
+}
+
+.box-sum {
+    margin-bottom: 30px;
+    margin-top: 30px;
+
+    border-top: 0.5px solid rgb(166, 165, 165);
+    border-bottom: 0.5px solid rgb(166, 165, 165);
+    background-color: #fff;
+}
+.box-sum,
+.box-all {
+    display: flex;
+    justify-content: center;
+    gap: 5px;
+    padding: 5px;
+}
+.box-all button {
+    width: 50px;
+    font-size: 15px;
+    font-weight: 500;
+    height: 25px;
+}
+
+.active-page {
+    background-color: rgb(68, 128, 239);
+    color: #fff;
+    border: 0px;
+}
+.pagination {
+    margin: 0;
+}
+
+.pagination-list {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.pagination-list li {
+    display: inline-block;
+    margin-right: 5px;
+}
+
+.pagination-list li a,
+.pagination-list li span {
+    padding: 5px 10px;
+    border: 1px solid #ccc;
+    text-decoration: none;
+    color: #333;
+}
+
+.pagination-list li.active span {
+    background-color: #007bff;
+    color: #fff;
+    border-color: #007bff;
+}
+
+.pagination-list li.disabled span,
+.pagination-list li.disabled a {
+    color: #aaa;
+    pointer-events: none;
+}
