--- a/public/css/style.css
+++ b/public/css/style.css
@@ -792,7 +792,7 @@ Version:1.0
     left: 0;
     top: 64px;
     background: #fff;
-    z-index: 1;
+    z-index: 999;
     width: 100%;
     -webkit-box-shadow: 0px 5px 15px #0000000a;
     -moz-box-shadow: 0px 5px 15px #0000000a;
@@ -1773,7 +1773,8 @@ Version:1.0
 }
 /* Sinlge Product */
 .single-product {
-    margin-top: 50px;
+    background-color: #fff;
+    margin-top: 30px;
 }
 .single-product .product-img {
     position: relative;
@@ -2004,7 +2005,9 @@ Version:1.0
     line-height: 50px;
 }
 .single-product .product-content {
-    margin-top: 20px;
+    border-top: 0.4px solid rgb(135, 135, 135);
+    padding: 5px;
+    margin-top: 10px;
 }
 .single-product .product-img:hover.default-overlay::before {
     background-color: rgba(38, 38, 38, 0.2);
@@ -5074,4 +5077,19 @@ Version:1.0
 .inp_checkbox {
     width: 17px;
     height: 17px;
+}
+
+.inp-soluong_cart {
+    width: 60px;
+}
+.btn-update_cart {
+    background-color: #fff;
+    border: 0;
+    width: 30px;
+    height: 30px;
+}
+
+.btn-update_cart img {
+    width: 100% !important;
+    height: 100% !important;
 }
